# high-propensity-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-vertex-ai.yml
components/: README.md  drift.py  predict.py  retrain.py  train.py
configs/: example_pipeline_params.yaml
docs/: decisions.md
pipelines/: README.md  drift_pipeline.py  predict_pipeline.py  retrain_pipeline.py  training_pipeline.py
pipelines/components/: README.md  check_retrain_decision.py  drift.py  drift_detection.py  feature_engineering.py  fetch_raw_data.py  generate_time_series_labels.py  model_training.py  predict.py  prediction_scoring.py  run_feature_engineering_sql.py  time_series_split.py  train.py  train_model_component.py  trigger_training_pipeline.py
scripts/: compile_and_package.py  submit_pipeline_job.py
tests/: test_psi.py  test_time_splits.py
